--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Shuvo",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.13.0",
     "mocha": "^10.6.0"
+  },
+  "devDependencies": {
+    "cypress": "^13.13.1"
   }
 }
