--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mocha": "^10.6.0"
   },
   "devDependencies": {
-    "cypress": "^13.13.1"
+    "cypress": "^13.13.1",
+    "cypress-xpath": "^2.0.1"
   }
 }
