--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mocha": "^10.6.0"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
     "cypress": "^13.13.1",
     "cypress-iframe": "^1.0.1",
     "cypress-xpath": "^2.0.1"
